
=======================================================
            WanT code:  Log of Changes 
=======================================================

26 Ago 2005      two bugs of small effect in external routine interfacing fixed. (AF)

24 Ago 2005      Array out-of-bound in the interfaces to ZGESV (util.f90): fixed.
                 It is a reasonable cause for the weird errors involving zmat_unitary. (AF) 

12 Ago 2005      plot.x: plotting cell dimensions from input now in crystal units and
                 not as FFT mesh. locate_wf logical variable added in order to manage
                 whether shift WF's or not. Shift is now performed to a cell centered
                 in the center of the plotting cell. Test input files updated. 
                 Portability issues addressed for the shell scripts in the code. (AF)

11 Ago 2005      Plot.x: wannier functions are moved as close as possible to the 
                 origin before plotting for sake of simplicity. Output changed. (AF) 

10 Ago 2005      Plot.x now supports .txt format. Small changes in the code. Test8 
                 partly updated (plot). CRD format used to writes coordinates for plotting
                 substituted with XYZ fmt. For completeness reasons, CRD file is written
                 anyway as tmp file by gcube2plt and then removed. (AF)

08 Ago 2005      Remaining memory (missing deallocations) detected and solved (ions 
                 and trial_center_data modules) thanks to G95 compiler. Checks added 
                 during hamiltonian read in conductor.x: simply occurring errors 
                 avoided. Further hidden memory allocations by iotk detected and 
                 workarounded. (AF)

07 Ago 2005      Test3 changed: only valence WFs are computed, no disentangle is performed.
                 run.sh script output format (logs) changed; basedef.sh definition script
                 added to utility dir. (AF)
