@@ -7,6 +7,7 @@
 
 &SUBSPACE
    win_max = 20.04
+   froz_max = 13.9
    dimwann = 6
    maxiter_dis = 400
 /
